--- a/_posts/2017-11-11-unit02.md
+++ b/_posts/2017-11-11-unit02.md
@@ -1,5 +1,5 @@
 ---
-title: Ocean Turbulence Theory
+title: 2. Ocean Turbulence Theory
 image: https://source.unsplash.com/collection/375719/2000x1322?a=.png
 ---
 
