--- a/_posts/2017-11-01-unit12.md
+++ b/_posts/2017-11-01-unit12.md
@@ -1,8 +1,3 @@
 ---
-title: 12. Advanced Techniques in Data Processing
-image: https://source.unsplash.com/collection/375719/2000x1322?a=.png
+title: 12. Glider measurements with MicroRider
 ---
-
-* integrate auxiliary data into an RSI data file, using a hotel file
-* perform in situ calibration of temperature probes
-* optimize despiking routine to remove erroneous data
